# qubic-gtest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  operations.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
tests/: CMakeLists.txt  test_main.cpp
tests/utils/: CMakeLists.txt  test_utils.cpp
